Fix spacing between cards

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -81,7 +81,7 @@ h3 {
 .stats__wrapper {
   @include flexcol;
   margin-top: 1.5rem;
-  gap: 1rem;
+  gap: 1.875rem;
 }
 
 .stat-card {
